# alglib

./: .env  .gitignore  CMakeLists.txt  README.md  doctor.json  move_terminal_data.ps1  start_service_strict.ps1  test_ping.ps1  test_ping_min.ps1  wave.ps1
alglib-cpp/: manual.cpp.html
alglib-cpp/src/: alglibmisc.h  ap.cpp  fasttransforms.cpp  fasttransforms.h  integration.h  interpolation.h  kernels_avx2.h  kernels_fma.h  kernels_sse2.cpp  kernels_sse2.h  linalg.h  optimization.h  specialfunctions.cpp  specialfunctions.h
alglib-cpp/tests/: test_i.cpp
docs/: ALGLIB_BRIDGE.md
src/alglib/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  integration.cpp  interpolation.cpp  kernels_avx2.cpp  kernels_fma.cpp  linalg.cpp  minlp.cpp  minlp.h  solvers.cpp  solvers.h  statistics.cpp  statistics.h
src/alglib_gpu/: ALGLIB_Service.cpp  CudaFftExecutor.cu  CudaKernels.cu  GpuCommon.h  GpuFftDispatcher.cpp  Logging.cpp  OpenClFftExecutor.cpp  OpenClKernels.cpp  alglib_bridge.cpp  alglib_pipe_messages.h  alglib_service_runtime.cpp  dll_exports.cpp  exports_ops_generated.cpp
src/dll_core/: GpuBackend.cpp  GpuBackend.h  GpuCommon.h  GpuFftDispatcher.h  Logging.h  OpenClFftExecutor.cpp  OpenClKernels.cpp
src/service/: ALGLIB_DiagService.cpp  ALGLIB_Service.cpp  alglib_service_runtime.h
tools/: mtcli.py  mtcli_projects.json
tools/bridge_gen/: .gitignore  README.md  bridge_wizard.py  opgen.py  ops_catalog.yaml
tools/bridge_gen/presets/: GPU_LegacyWave1.0.4.yaml
